# phylobase

./: .Rbuildignore  .gitignore  .travis.yml  DESCRIPTION  NAMESPACE  NEWS  NEWS.md  README.Rmd  README.md  TODO  cleanup  configure  configure.in  configure.win  cran-comments.md
src/ncl/: ._AUTHORS  ._ChangeLog  ._Makefile.am  ._configure.ac  AUTHORS  ChangeLog  INSTALL  Jamroot  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  bootstrap.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool  ncl.h  nxsassumptionsblock.h  nxsblock.h  nxscharactersblock.h  nxscxxdiscretematrix.h  nxsdatablock.h  nxsdistancesblock.h  nxsexception.h  nxsmultiformat.h  nxspublicblocks.h  nxsreader.h  nxsstring.h  nxstaxablock.h  nxstoken.h  nxstreesblock.h  nxsunalignedblock.h
src/ncl.original/: README  aclocal.m4  configure  configure.ac  nclv2.1.pc.in
src/ncl.original/data/: distances.nex  unaligned.nex
src/ncl.original/example/basiccmdline/: Makefile.in  basiccmdline.h
src/ncl.original/example/basicfactory/: basicfactory.cpp
src/ncl.original/example/gapcode/: Makefile.am
src/ncl.original/example/nclsimplest/: Makefile.in
src/ncl.original/example/normalizer/: Makefile.in  converter.cpp  us2ml.cpp
src/ncl.original/example/splitsinfile/: Makefile.am  Makefile.in
src/ncl.original/example/translate/: Makefile.in  translateNuc.cpp
src/ncl.original/html/: MyCharactersBlock.html  MyNexusToken.html  NStrCaseSensitiveEquals.html  NxsAssumptionsBlock.html  NxsCharactersBlock.html  NxsDataBlock.html  NxsDiscreteMatrix.html  NxsDistancesBlock.html  NxsException.html  NxsStringEqual.html  NxsToken.html  footer.html  index.html  roadmap.html
src/ncl.original/ncl/: nxsassumptionsblock.cpp  nxsblock.cpp  nxsdefs.h  nxsdistancesblock.h  nxsmultiformat.h  nxsreader.cpp  nxstoken.h
src/ncl.original/swig/: Makefile.am
src/ncl.original/test/: Makefile.am  README
src/ncl.original/test/ExternalInvalidIn/: aarelaxedphylip_rana.phy  dnarelaxedphylip_rana.phy
src/ncl.original/test/ExternalValidIn/: aaphylip_emboss.phy  dnarelaxedphylip_brana.phy
src/ncl.original/test/ExternalValidOut/: aarelaxedphylip_rana.phy
src/ncl.original/test/NTSValidIn/: adh.nex  anolis.nex  avian_ovomucoids.nex  basic-bush-dos.nex  basic-rake.nex  characters.nex  distances.nex  dzmissing_bug.nex  kim.nex  mdata.nex  partitions.nex  protein.nex  replicase.nex
src/ncl.original/test/NTSValidOut/: adh.nex  anolis.nex  basic-bush-mac.nex  basic-bush-unix.nex  basic-rake.nex  cynmix.nex  m.nex  nhxtree.nex  paup_characters.nex  protein.nex  replicase.nex  t.nex  treeswithouttaxa.nex  unaligned.nex
src/ncl.original/test/OldValidIn/: m.nex
src/ncl.original/test/TranslateOut/: bglobinoof.nex
src/ncl.original/test/data/: characters.nex
src/ncl/autom4te.cache/: output.1  requests  traces.0  traces.1
src/ncl/config/: ._libtool.m4  ax_cxx_flags.m4
src/ncl/config/m4/: ax_cxx_flags.m4  ax_python_module.m4
src/ncl/data/: characters.nex  sample.tre
src/ncl/example/: Makefile  Makefile.am  Makefile.in
src/ncl/example/basiccmdline/: Makefile  Makefile.am  Makefile.in  basiccmdline  basiccmdline.cpp  basiccmdline.h
src/ncl/example/basicfactory/: Makefile.am  Makefile.in  basicfactory.h
src/ncl/example/gapcode/: Makefile.in  gapcode.cpp
src/ncl/example/nclsimplest/: Makefile  Makefile.am  Makefile.in  nclsimplest  nclsimplest.cpp
src/ncl/example/ncltest/: Makefile  Makefile.am  Makefile.in  ncltest  ncltest.cpp  ncltest.h
src/ncl/example/normalizer/: ._us2ml.cpp  Makefile  Makefile.am  Makefile.in  normalizer  normalizer.cpp  normalizer.h  validator
src/ncl/example/patristic/: Makefile.am  Makefile.in  patristic.cpp
src/ncl/example/splitsinfile/: splitsinfile.cpp
src/ncl/example/translate/: Makefile.am
src/ncl/html/: BASICCMDLINE.html  MyAssumptionsBlock.html  MyDataBlock.html  MyNexusFileReader.html  MyToken.html  NStrCaseInsensitiveEquals.html  NxsBlock.html  NxsDiscreteDatum.html  NxsDistanceDatum.html  NxsEmptyBlock.html  NxsReader.html  NxsSetReader.html  NxsString.html  NxsTaxaBlock.html  NxsTreesBlock.html  classes.html  contents.html  functions.html  index.html  ncl.css  styleguide.html
src/ncl/ncl/: ._nxsdefs.h  ._nxsmultiformat.cpp  ._nxspublicblocks.h  ._nxsreader.cpp  ._nxsstring.cpp  ._nxstoken.cpp  ._nxstoken.h  Makefile.am  Makefile.in  Makefile.unix  Makefile.win  ncl.h  nxsallocatematrix.h  nxsassumptionsblock.cpp  nxsassumptionsblock.h  nxsblock.cpp  nxsblock.h  nxscharactersblock.cpp  nxscharactersblock.h  nxscxxdiscretematrix.cpp  nxsdefs.h  nxsdiscretedatum.cpp  nxsdiscretedatum.h  nxsdiscretematrix.cpp  nxsdiscretematrix.h  nxsdistancesblock.cpp  nxsemptyblock.cpp  nxsexception.cpp  nxsexception.h  nxsindent.h  nxsmultiformat.cpp  nxspublicblocks.h  nxsreader.cpp  nxsreader.h  nxssetreader.cpp  nxssetreader.h  nxsstring.cpp  nxsstring.h  nxstaxablock.cpp  nxstaxablock.h  (+7 more)
src/ncl/ncl/.deps/: nxsassumptionsblock.Plo  nxsblock.Plo  nxscharactersblock.Plo  nxsdatablock.Plo  nxsdiscretedatum.Plo  nxsdiscretematrix.Plo  nxsdistancedatum.Plo  nxsdistancesblock.Plo  nxsexception.Plo  nxsreader.Plo  nxssetreader.Plo  nxsstring.Plo  nxstaxablock.Plo  nxstoken.Plo  nxstreesblock.Plo  nxsunalignedblock.Plo
src/ncl/ncl/.libs/: libncl  libncl-2.0.04  libncl.lai
src/ncl/swig/: ncl.i
src/ncl/test/: Makefile  Makefile.am  Makefile.in  roundTripNCLTest.py
src/ncl/test/ExternalValidIn/: ._aafasta_twoprot.fas  aaaln_twoprot_undec.aln  aafasta_twoprot.fas  aarelaxedphylip_rana.phy  dnarelaxedphylip_rana.phy
src/ncl/test/ExternalValidOut/: ._aafasta_twoprot.fas  aaaln_twoprot.aln  aafasta_twoprot.fas  aaphylip_emboss.phy  dnarelaxedphylip_brana.phy
src/ncl/test/NTSInvalidIn/: multitax.nex
src/ncl/test/NTSValidIn/: basic-bush-dos.nex  basic-bush-mac.nex  basic-bush-mixed-line-endings.nex  basic-rake.nex  bglobin.nex  characters.nex  charsets.nex  linktest.nex  m.nex  nhxtree.nex  notaxablock.nex  paup_characters.nex  t.nex  treeswithouttaxa.nex
src/ncl/test/NTSValidOut/: avian_ovomucoids.nex  basic-bush-unix.nex  basic-rake.nex  bglobin.nex  characters.nex  t.nex  (+10 more)
(+275 files in other folders)
